--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "validate": "npm run lint && npm run type-check && npm run test:ci",
-    "build": "npm run validate && next build",
+    "build": "next build",
+    "build:ci": "npm run validate && next build",
     "start": "next start"
   },
   "dependencies": {
